<resources>
    <string name="title_activity_splash_screen">4Ts</string>
    <string name="app_name">ParkingAdmin</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="g_p_b_n">Gộp bàn</string>
    <string name="t_n_b_n"><![CDATA[<Tên bàn>]]></string>
    <string name="v_tr">Vị trí:</string>
    <string name="vitri"><![CDATA[<Vị trí>]]></string>
    <string name="soghe">Số ghế</string>
    <string name="soghetxt"><![CDATA[<Số ghế>]]></string>
    <string name="sokhach">Số khách:</string>
    <string name="songuoi">Nhập số người</string>
    <string name="moban">Mở bàn</string>
    <string name="tenban">Tên bàn:</string>
    <string name="t_n_m_n"><![CDATA[<Tên món>]]></string>
    <string name="s_l_ng"><![CDATA[<Số lượng>]]></string>
    <string name="n_gi">Đơn giá</string>
    <string name="th_nh_ti_n">Thành tiền</string>
</resources>
